ui design completed

--- a/src/app/home/add-news-form/add-news-form.component.html
+++ b/src/app/home/add-news-form/add-news-form.component.html
@@ -1,3 +1,32 @@
-<p style="margin-top: 5rem; color: white,">
-  add-news-form works!
-</p>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>
+      Agrega tu noticia
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-content color="light" class="container">
+  <form>
+    <ion-item class="form-item">
+      <ion-label position="floating">Titulo de la noticia</ion-label>
+      <ion-input placeholder="Enter text"></ion-input>
+    </ion-item>
+    <ion-item class="form-item">
+      <div class="input-section">
+        <ion-label class="input-label">Agregue la fecha de la noticia</ion-label>
+        <ion-datetime presentation="day-month-year"></ion-datetime>
+      </div>
+    </ion-item>
+    <ion-item>
+      <ion-textarea placeholder="Agrega la descripcion" [autoGrow]="true">
+        <ion-label position="fixed">Descripcion</ion-label>
+      </ion-textarea>
+    </ion-item>
+    <div class="btn">
+      <ion-button expand="block" color="primary">Guardar la noticia
+        <ion-icon slot="end" name="person-add"></ion-icon>
+      </ion-button>
+    </div>
+
+  </form>
+</ion-content>
