--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,11 +1,4 @@
-<ion-header [translucent]="false">
-  <ion-toolbar>
-    <ion-title>
-      Noticias
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="false" color="light">
   <ion-router-outlet></ion-router-outlet>
   <ion-tabs>
     <ion-tab-bar slot="bottom">
