interface and ui updated

--- a/src/app/home/news-list/news-list.component.html
+++ b/src/app/home/news-list/news-list.component.html
@@ -1,5 +1,6 @@
 <ion-header>
   <ion-toolbar>
+    <ion-icon size="large" slot="start" name="logo-designernews"></ion-icon>
     <ion-title>
       Mis Noticias
     </ion-title>
@@ -16,7 +17,7 @@
       <ion-card-content>
         Here's a small text description for the card content. Nothing more, nothing less.
       </ion-card-content>
-      <ion-button expand="block" color="primary">Eliminar la noticia
+      <ion-button expand="block" color="danger">Eliminar la noticia
         <ion-icon slot="end" name="trash"></ion-icon>
       </ion-button>
     </ion-card>
