--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,7 +5,7 @@
       <ion-tab-button tab="news">
         <ion-icon name="newspaper-sharp"></ion-icon>
         <ion-label>Noticias</ion-label>
-        <ion-badge>6</ion-badge>
+        <ion-badge>{{newsCount}}</ion-badge>
       </ion-tab-button>
       <ion-tab-button tab="add">
         <ion-icon name="add-sharp"></ion-icon>
